--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri-build = { version = "1.0.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0", features = ["api-all"] }
+sqlx = { version = "0.6.1", features = [ "runtime-actix-native-tls", "mysql"] }
 
 [features]
 # by default Tauri runs in production mode
